--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <nav>
         <div class="logo">
           <a href="./index.html">
-            <img src="/assets/codveda-light.png" alt="codveda logo" />
+            <img src="./assets/codveda-light.png" alt="codveda logo" />
           </a>
         </div>
         <div class="links">
